# laba_oop_2025

./: README.md
laba1/: .gitignore  CMakeLists.txt
laba1/include/: closet_pair.h  main.cpp  solution.cpp
laba1/src/: closet_pair.cpp  main.cpp
laba1/tests/: CMakeLists.txt  test_closet_pair.cpp
laba2/: .gitignore  CMakeLists.txt
laba2/include/: Binary.h  binary.h
laba2/src/: CMakeLists.txt  binary.cpp  main.cpp
laba2/tests/: CMakeLists.txt  test.cpp
laba3/: .gitignore  CMakeLists.txt
laba3/ include/: Array.h  Figure.h  Square.h  Triangle.h
laba3/include/: Array.h  Figure.h  Rectangle.h  Square.h  Triangle.h
laba3/src/: Array.cpp  Figure.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp  main.cpp
laba3/tests/: test_figures.cpp
